<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">TrakingRealTime</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Has olvidado tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="new_user">¿Nuevo usuario?</string>
    <string name="sign_up">Regístrate</string>

    <string name="navigation_guidance_day" translatable="false">mapbox://styles/mapbox/navigation-guidance-day-v4</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="noTokenDialogTitle">Error: no mapbox access token</string>
    <string name="noTokenDialogBody">Please put your mapbox access token to res/values/mapbox_access_token.xml</string>
    <string name="title_camera_transitions">Use camera to frame the map</string>
    <string name="description_camera_transitions">Use NavigationCamera to show various map camera transitions using live location and routing data.</string>
    <string name="button_rotas">Button Rotas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>